--- a/学习心得/AP/demo/tongji-demo/CMakeLists.txt
+++ b/学习心得/AP/demo/tongji-demo/CMakeLists.txt
@@ -38,7 +38,7 @@ project(saic-someip-demo
   LANGUAGES C CXX
   VERSION "1.0.0"
 )
-
+set(CMAKE_CXX_FLAGS "-g -O0")
 set(CMAKE_CXX_STANDARD 14) # C++14...
 set(CMAKE_CXX_STANDARD_REQUIRED ON) #...is required...
 set(CMAKE_CXX_EXTENSIONS OFF) #...without compiler extensions like gnu++14
